app/assets/stylesheets/venues/venues.scss
// Place all the styles related to the Venues controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/**
* Colors
*/
$pogo-blue:          #169EF1;
$pogo-orange:        #F9A146;
$pogo-orange-border: #FF982E;
$pogo-orange-active: #FFAC57;
$pogo-teal:          #5AB1A8;
$pogo-red:           #D04B3D;
$dark-grey:          #D8D8D8;
$mid-grey:           #E8E8E8; /*#D3D3D3*/
$light-grey:         #F0F0F0;

/**
 * Card Color Definitions
 */
$card-border:        #E4E4E4;
$card-background:    #F2F2F2;

/**
* Globals (shoud go to application.css)
*/
html {
  height: 100%;
}

body {
  height: 100%;
  font-family: "source sans pro", verdana, arial, helvetica, sans-serif;
  font-weight: 400;
  background-color: white;
}

#notice {

}

p{
  font-family: "source sans pro", verdana, arial, helvetica, sans-serif;
}

.playogo-logo {
  height: 32px; /* was 22px for non beta logo */
}

.navbar {
  margin-bottom: 0px;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: $pogo-blue;

  * {
    font-family: "source sans pro", verdana, arial, helvetica, sans-serif;
  }
}

.navbar-brand {
  height: 22px!important;
}

#notice {
  margin:0px;
}

/**
* Bootstrap modifiers
*/

.btn-default,
.btn-default:hover, 
.btn-default:focus, 
.btn-default:active, 
.btn-default.active,
.btn-default:hover, 
.btn-default:focus, 
.btn-default:active, 
.btn-default.active, 
.open .dropdown-toggle.btn-default,
.btn-default.disabled, 
.btn-default[disabled], 
fieldset[disabled] .btn-default, 
.btn-default.disabled:hover, 
.btn-default[disabled]:hover, 
fieldset[disabled] .btn-default:hover, 
.btn-default.disabled:focus, 
.btn-default[disabled]:focus, 
fieldset[disabled] .btn-default:focus, 
.btn-default.disabled:active, 
.btn-default[disabled]:active, 
fieldset[disabled] .btn-default:active, 
.btn-default.disabled.active, 
.btn-default[disabled].active, 
fieldset[disabled] .btn-default.active {
  border-color: $mid-grey;
}




/**
* Venue page
*/
#venue-container {
/*  border-width: 5px;
  border-color: red;
  border-style: solid;*/
  padding: 0;
  margin-left: 0px; 
  margin-right: 0px; 
  width: 100%;
  height: calc(100% - 50px);

}

/**
* Step
*/
.step-container {
  text-align: center;
  font-size: 14pt;
  div { /* vertical alignment div */
    div.spacer {
      height: 150px;
    }
  }
}

/**
* Venue options
*/
#datepicker{
  position: relative;
  z-index: 101;
}

/**
* Schedule
*/

.sched-row {
  font-family: "source sans pro", verdana, arial, helvetica, sans-serif;
  margin-left: 0px;
  margin-right: 0px;
  height:100%;
}

#schedule {
  height:100%;
  overflow:scroll;
  padding: 0;
}



/**
* Month nav
*/

#month-nav-container{
  position:relative;
  display: inline;
  text-align: center;
  /*display: none;*/
  #month {
    /*text-align: center;*/
    font-family: "source sans pro", verdana, arial, helvetica, sans-serif;
    font-weight: 200;
    font-size: 18pt;
    /*background-color: $light-grey;*/
    /*border-color: $dark-grey;*/
    padding-top: 0px;
    padding-bottom: 2px;
    margin-bottom: 20px;
    /*font-size: 18pt;*/
    .calendar-icon {
      padding: 10px;
      padding-right: 0px;
    }
  }
}

/**
* Day Navigation
*/

#day-nav-container {
  width: 100%;
  display: inline-block;
  margin-bottom: -5px; /* to make flush with div under */

  /* Clearfix */
  .day-tabs:after {
    display:block;
    clear:both;
    content:' ';
  }

  .day-tabs {
    padding: 0;
    margin-bottom: 0px;
    height:36px;
    li {
      color: black;
      float:left;
      list-style: none;
      width:11%;
      height: 100%;
      background: transparent;
      text-align: center;
      cursor: pointer;
      border-top-left-radius:    4px;
      border-top-right-radius:   4px;
      border-bottom-right-radius:0px;
      border-bottom-left-radius: 0px;

      p {
        font-weight: 400;
        /*display:inline-block;*/
        font-size: 14px;
        color:#4c4c4c;
        border-radius: 3px 3px 0px 0px;
        margin-bottom: 0px;
        transition:all linear 0.15s;
      }

    }

    li:first-child, li:last-child {
      display: table;

      p {
        display: table-cell;
        vertical-align: middle;
      }

    }

    li:hover {
      background-color: $light-grey;
      transition: all linear 0.15s;
      /*border-radius: 3px 3px 3px 3px;*/
      /*text-decoration:none;*/
      p {
        color: $pogo-blue;
      }
    }

    li.active, li.active:hover {
      background: $mid-grey;

      /* Curved edges */
/*      -moz-box-shadow:    inset 1px 1px 5px #838383;
      -webkit-box-shadow: inset 1px 1px 5px #838383;
      box-shadow:         inset 1px 1px 5px #838383;*/

      p {
        /*color: white;*/
      }
    } 
  }

}

/**
* Hours display
*/
.hours-row {

/*  border-top: 2px solid $pogo-blue;*/
  background-color: white;

/*  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: $pogo-blue; now being created dynamically*/
}

div.hours-col {
  padding:4px;

}


/*div.hour-col {
  height:30px;
  float:left;
  background: red;
}*/


.clearfix {
  width:0px;
  clear:both;
  display:block;
}

/**
* Venue schedule
*/
/* columns of same height styles */
#tablet-container-outer {
  border-radius: 35px;
  /* Drop shadow */
  -webkit-box-shadow: 2px 5px 3px 1px $dark-grey;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow:    2px 5px 3px 1px $dark-grey;  /* Firefox 3.5 - 3.6 */
  box-shadow:         2px 5px 3px 1px $dark-grey;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
/*box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color];*/
}

#tablet-container-inner {
  text-align: center;
  border-radius: 35px;
  padding: 25px;

  /* Curved edges */
  -moz-box-shadow:    inset -2px -5px 30px #838383;
  -webkit-box-shadow: inset -2px -5px 30px #838383;
  box-shadow:         inset -2px -5px 30px #838383;

/*$dark-grey: #D8D8D8;
  $mid-grey: #E8E8E8; 
  $light-grey: #F0F0F0;*/

}

#venue-rows-container {
  position: relative;
  text-align: left;
}

#venue-rows-container:before{
  content:'';
  position: absolute;
  z-index: 101;
  top:0px;
  left:0px;
  right:0px;
  bottom:0px;
  -moz-box-shadow:    inset 0px 0px 5px #838383;
  -webkit-box-shadow: inset 0px 0px 5px #838383;
  box-shadow:         inset 0px 0px 5px #838383;

  /* Disable click events */
  pointer-events: none;

}

div.name-col {
  background-color: transparent;
  padding: 5px;
  max-width: 60px;
  min-width: 60px;
  font-size: 8pt;
}

div.sched-col {
  /*height: 30px;*/
  background-color: transparent;
}

div.divider {
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: $dark-grey;
  height: 100%;
  position: absolute;
  top:0;
  z-index: 1;
}


.row-same-height {
    display: table;
    width: 100%;
}

.col-same-height {
    display: table-cell;
    float: none !important;
}

div.avail-block {
  position:absolute;
  z-index: 100;
  background: $pogo-orange;
  height: 12px;
  cursor: pointer;
}

div.hour {
  position:absolute;
  text-align:center;
  color:black;
  width: 10px;
  margin-left: -5px;
  font-size: 8pt;
}

.odd {
  display: none;
}

.venue-row {
  margin-left: 0px;
  /*margin-top: 15px;
  margin-bottom: 25px;*/
  margin-top: 0px;
  margin-bottom: 0px;

  border-bottom-width: 0px; /*5px;*/
  /*border-bottom-style: solid;*/
/*  border-right-width: 2px;
  border-right-style: solid;*/
  border-color: $dark-grey;

  width:100%;
  
}

.venue-name-col {
  font-size: 14pt;
  color: white;
  font-weight: 200;
  padding-top: 10px;
  padding-bottom: 10px;
  background: $pogo-blue;
}

.theatre-row:nth-child(2n) {
  background-color: $light-grey;
}

.theatre-row:nth-child(2n+1) {
  background-color: $mid-grey;
}

/**
 * Google Map
 */
#map {
  border-style: solid;
  border-width: 0px 0px 0px 1px;
  border-color: $card-border;
}

/**
* Modals
*/
#popover-container {
  position: absolute;
  width: 500px;
  height: 500px;
  background: red;
  display: none;
}

#booking-modal-btn-timeselect, #booking-modal-btn-policies, #booking-modal-btn-inputinfo {
  display:none;
}

.modal-body {
  padding:30px;
}

/**
* Modal - Time Select
*/

.timeselect-slider {
  margin-top: 60px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  padding:10px;
}

.timeselect-slider .ui-state-default {
  background: none;
}

div.ui-slider-range.ui-widget-header.ui-corner-all {
  background: $pogo-blue;
}

.timeselect-slider.ui-slider .ui-slider-handle {
  width: 14px;
  height: 18px;
  margin-left: -5px;
  top: -4px;
  border: none;
  background: none;
}

.timeselect-slider {
  height: 10px;
}

.range-handle {

  background-color: #fff;
  border-radius: 100%;
  cursor: grab;
  height: 40px;
  left: -10px;
  top: -8px;
  position: absolute;
  width: 40px;

  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);

}

.range-handle:active {
  cursor: grabbing;
}


#modal-selected-timerange, #modal-selected-venue, #modal-selected-price {
  color: $pogo-blue;
}

/**
* Modal - Time Select
*/
#input-info-name-error, #input-info-phone-error, #input-info-description-error {
  display: none;
}

/*
 * Loading Animation
 */
#loading-animation-container {
  display: none;
  position:absolute;
  top:0px;
  left:0px;
  width:100%;
  height: 100%;
  text-align: center;
  z-index: 2000;

  background: rgba(0,0,0,.5);

  img { 
     display:block; 
     position:absolute; 
     top:50%; 
     left:50%;
     margin-top: -130px; 
     margin-left: -130px;
  }

}

/*
 * Flash alert
 */
.alert {
  margin-bottom: 0px;
}

/*
  Media Queries
  -----------------------------------------------*/

/* Portrait and landscape phone*/
@media (min-width:534px){
  #schedule {
    padding:15px;
  }
  #map {
    /*display:none;*/
  }
}

@media (max-width:766px) {
  #map {
    display:none;
  }
}

/* Landscape phone to portrait tablet */
@media (min-width:768px){
  
}
/* Large desktop */
@media (min-width:1200px){

}

